[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Monsters_Creatures_Fantasy/Flying eye/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/FlyingEnemy2.0.gd" type="Script" id=2]
[ext_resource path="res://assets/Sound Assets/EnemySwordAttack.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Sound Assets/enemyDeath.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/PlayerDetectionZone.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=55]
radius = 12.0
height = 0.0

[sub_resource type="Shader" id=56]
code = "shader_type canvas_item;

uniform bool red = false;

void fragment() {
	vec4 texture_colour = texture(TEXTURE, UV);
	if (red) {
		vec3 Red = vec3 (1,0,0);
		vec3 reddened_texture_rgb = mix(texture_colour.rgb, Red, 0.6);
		COLOR = vec4(reddened_texture_rgb, texture_colour.a);
	} else{
		COLOR = texture_colour
	}
	
}"

[sub_resource type="ShaderMaterial" id=57]
shader = SubResource( 56 )
shader_param/red = false

[sub_resource type="Animation" id=53]
resource_name = "Attack"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
} ]
}

[sub_resource type="Animation" id=54]
resource_name = "Death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=51]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24 ]
}

[sub_resource type="Animation" id=52]
resource_name = "Walk"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 12.875, 11.875 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 13, 11.75 )

[node name="FlyingEye" type="KinematicBody2D" groups=["Enemy"]]
position = Vector2( 437, 305 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 4 )
shape = SubResource( 55 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 57 )
position = Vector2( 1, -1 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 20
frame = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Attack = SubResource( 53 )
anims/Death = SubResource( 54 )
anims/RESET = SubResource( 51 )
anims/Walk = SubResource( 52 )

[node name="HitBox" type="Area2D" parent="." groups=["FlyEnemy"]]
position = Vector2( -40.25, 0 )
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.14902, 0, 1, 1 )
self_modulate = Color( 0, 0.0392157, 1, 1 )
position = Vector2( 24.125, 3.875 )
shape = SubResource( 24 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( -40.25, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 24, 4 )
shape = SubResource( 23 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
position = Vector2( 5, 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
